<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_HeightDetection" Id="{2a9b75e7-74f1-44ba-8fbe-2fcb7ae2f47c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_HeightDetection :
(
	DO_NOTHING := 0,
	SET_PROGRAM	:= 1,
	READ_HEIGHT	:= 2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>